# aws-teste-streamlit-fastapi

./: pyproject.toml  requirements.txt
api/: main.py
frontend/: app.py
